# FlapPyBirdCameraControl

./: .gitignore  Makefile  main.py  pyproject.toml
src/: flappy.py
src/utils/: webcam_pose.py
